2007-05-21: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Add patch from genstef to fix issues from Bug 176337

2007-05-11: Paul Varner <fuzzyray@gentoo.org>
	* eclean: Changed permission check to see if you are either root or
	belong to the portage group (Bug #177385)

2007-05-11: Paul Varner <fuzzyray@gentoo.org>
	* eclean: Updated eclean to not delete metadata.dtd by default (Bug
	#176951)

2007-05-10: Marius Mauch <genone@gentoo.org>
	* euse: Fix incorrect flag status display when a flag appears multiple
	times in a single location

2007-04-25: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Re-added subversion/git support with fixes from genstef.
	(Bug #136048)

2007-04-24: Paul Varner <fuzzyray@gentoo.org>
	* etcat: Removed from Makefile (deprecated since 04-25-2005)
	* qpkg: Removed from Makefile (deprecated since 04-25-2005)

2007-04-23: Paul Varner <fuzzyray@gentoo.org>
	* genpkgindex, epkginfo: Move to /usr/bin from
	/usr/lib/gentoolkit/bin (Bug #175759)

2007-04-10: Paul Varner <fuzzyray@gentoo.org>
	* equery: Change equery uses to command to display the best matching
	uninstalled package version if an uninstalled package is specified.
	Changed the meaning of -a to mean display all versions. (Bug #152325)

2007-04-01: Alec Warner <antarus@gentoo.org>
	* eread: Fix path and fully qualified paths (Bug #172969)

2007-03-31: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix traceback in equery which (Bug #134053)

2007-03-29: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Change package.get_???_deps() methods to try the portage
	tree first, since emerge always uses the portage tree for dependencies.
	(Bug #164678)

2007-03-29: Paul Varner <fuzzyray@gentoo.org>
	* equery: Convert deprecated strings functions to str methods (Bug
	#172694)

2007-03-25: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Remove subversion/git patch due to many bugs.

2007-03-18 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Change --no-color to --nocolor for consistency